# guizia

./: .env.example  .gitignore  .prettierrc  .vercelignore  Dockerfile  README.md  docker_start.sh  package.json
agents/: general.json  guizia.json
contracts/: .env.example  README.md  hardhat.config.ts  package.json
contracts/contracts/: Guizia.sol  GuiziaNFT.sol
contracts/scripts/: deployGuizia.js  deployGuiziaNFT.js
guizia-generator-service/: .dockerignore  .env.exemple  .gitignore  .pylintrc  pyproject.toml
guizia-generator-service/src/app/routes/: __init__.py  health.py
guizia-twitter-bot/src/: agent.py
guizia-webapp/: README.md  package.json  tsconfig.json
guizia-webapp/src/abi/: guizia.abi.json
guizia-webapp/src/app/: Page.module.css  client.ts
guizia-webapp/src/app/collection/: Collection.module.css
guizia-webapp/src/app/faq/: FAQ.module.css  page.tsx
guizia-webapp/src/app/terminal/: Terminal.module.css
src/: agent.py  index.py  prompts.py
src/abi/: guizia-nft.abi.json
src/actions/: twitter_actions.py
src/app/: layout.tsx  page.tsx
src/app/api/tweets/: route.ts
src/app/collection/: page.tsx
src/app/components/ConnectButton/: ConnectButton.tsx
src/app/components/Credits/: Credits.tsx
src/app/components/FAQCard/: FAQCard.module.css
src/app/faq/: page.tsx
src/app/middleware/: auth.py
src/app/routes/: gen_image_personality.py
src/app/terminal/: page.tsx
src/app/utils/: personalities.py
src/chains/: sonic-blaze.ts  sonic.ts
src/connections/: twitter_connection.py
src/utils/: ipfs.ts  metadata.ts
(+12 files in other folders)
